## [LiteLoader Release Note]
This version Fix Bugs and add new feature ,not applicable to previous versions.

## [New features]
- Add MySQL support for LLDB
- Add Level::cloneMob, #405
- Update headers for 1.18.33.02

## [Bug Fixes]
- Fix a error of block nbt in onPlaceBlock, #406
- Fix WelcomeText Bug, #401

## [Change]
- LLPeEdior toolchain won't remove original bds
- PreLoader can run as LiteLoaderCore now
- Shell Link files (.lnk) can be loaded now
- LLPeEdior toolchain won't remove original bds