@@ -158,14 +158,13 @@ bool LLSEExportFunc(ScriptEngine *engine, const Local<Function> &func, const str
 bool LLSERemoveAllExportedFuncs_Debug(ScriptEngine* engine);
 bool LLSERemoveAllExportedFuncs(ScriptEngine* engine)
 {
-    if (LL::isDebugMode())
-    {
-        return LLSERemoveAllExportedFuncs_Debug(engine);
-    }
+    return LLSERemoveAllExportedFuncs_Debug(engine);
+#if 0
     erase_if(globalShareData->exportedFuncs, [&engine](auto& data) {
         return data.second.engine == engine;
     });
     return true;
+#endif
 }
 
 
@@ -173,10 +172,8 @@ bool LLSERemoveAllExportedFuncs(ScriptEngine* engine)
 
 Local<Value> LlClass::exportFunc(const Arguments& args)
 {
-    if (LL::isDebugMode())
-    {
-        return exportFunc_Debug(args);
-    }
+    return exportFunc_Debug(args);
+#if 0
     CHECK_ARGS_COUNT(args, 2);
     CHECK_ARG_TYPE(args[0], ValueKind::kFunction);
     CHECK_ARG_TYPE(args[1], ValueKind::kString);
@@ -186,14 +183,13 @@ Local<Value> LlClass::exportFunc(const Arguments& args)
         return Boolean::newBoolean(LLSEExportFunc(EngineScope::currentEngine(), args[0].asFunction(), args[1].toStr()));
     }
     CATCH("Fail in LLSEExport!");
+#endif
 }
 
 Local<Value> LlClass::importFunc(const Arguments &args)
 {
-    if (LL::isDebugMode())
-    {
-        return importFunc_Debug(args);
-    }
+    return importFunc_Debug(args);
+#if 0
     CHECK_ARGS_COUNT(args, 1);
     CHECK_ARG_TYPE(args[0], ValueKind::kString);
 
@@ -214,4 +210,5 @@ Local<Value> LlClass::importFunc(const Arguments &args)
         });
     }
     CATCH("Fail in LLSEImport!")
+#endif
 }
