@@ -5,6 +5,8 @@ This version Fix Bugs and add new feature ,not applicable to previous versions.
 - Add MySQL support for LLDB
 - Add Level::cloneMob, #405
 - Update headers for 1.18.33.02
+- LLSE gets the name of the plugin itself, #404
+- Add RemoteCall API , [Documentation](https://docs.litebds.com/#/en_US/Development/ScriptAPI/Ll?id=remote-function-call)
 
 ## [Bug Fixes]
 - Fix a error of block nbt in onPlaceBlock, #406
@@ -14,4 +16,3 @@ This version Fix Bugs and add new feature ,not applicable to previous versions.
 - LLPeEdior toolchain won't remove original bds
 - PreLoader can run as LiteLoaderCore now
 - Shell Link files (.lnk) can be loaded now
-- LLPeEdior toolchain won't remove original bds
